2007-08-26  Frederic Ruaudel <grumz@grumz.net>
	* nact/nact-import-export.c: Remove the import option for 
	old xml config file format.

	* nact/nautilus-actions-config.glade: Fix bug when clicking the About
	button for the first time, both the about and the edit action dialog 
	appears.

	* nact/nautilus-actions-config.glade: Remove the import option for 
	old xml config file format.

	* libnautilus-actions/nautilus-actions-config-gconf-private.h:
	* nact/nautilus-actions-config.glade:
	* nact/nact-editor.c:
	* nact/nact.c: Fix grammar and syntax error in translatable string. 
	Make GnomeVFS syntax homogeneous. Remove formating string in glade
	from translation (space only strings). Add some i18n notes.

2007-05-30  Frederic Ruaudel <grumz@grumz.net>
	* libnautilus-actions/nautilus-actions-config-schema-reader.c:
	* libnautilus-actions/nautilus-actions-config-schema-writer.c:
	* libnautilus-actions/nautilus-actions-config-gconf-reader.c:
	* libnautilus-actions/nautilus-actions-config-gconf.c:
	* libnautilus-actions/nautilus-actions-config.c:
	* libnautilus-actions/nautilus-actions-config-gconf-writer.c:
	* libnautilus-actions/nautilus-actions-config.h:
	* libnautilus-actions/nautilus-actions-config-gconf-private.h:
	* nact/nact-profile-editor.c:
	* nact/nact-editor.c:
	* nact/nact-editor.h:
	* nact/nact.c: Change the way the profile names are managed to add
	the existence of a description name for better readability in Nact.
	It allows the use of UTF8 names in the profiles list.

	* nact/nact-editor.c:
	* nact/nact.c: Fix some missing/buggy resources freeing.

	* libnautilus-actions/nautilus-actions-config-gconf-writer.c:
	Fix action profile saving in GConf.

	* nact/nautilus-actions-config.glade:
	* nact/nact-editor.c: Replace the "duplicate" profile button by
	a "copy" and a "paste" button, so it is now possible to copy a 
	profile from one action to another.

	* nact/nact-editor.c: Update the "save action" code

2007-05-25  Frederic Ruaudel <grumz@grumz.net>