@@ -1,3 +1,12 @@
+2007-09-02  Frederic Ruaudel <grumz@grumz.net>
+	* nact/nact-import-export.c: Use GConf reader instead of GConf 
+	writer to read config in the export function.
+
+	* libnautilus-actions/nautilus-actions-config-schema-reader.c:
+	* libnautilus-actions/nautilus-actions-config-schema-writer.c:
+	* plugin/nautilus-actions.c: Fix the function to get hash keys
+	from profiles hash table.
+
 2007-08-26  Frederic Ruaudel <grumz@grumz.net>
 	* nact/nact-import-export.c: Remove the import option for 
 	old xml config file format.
